testdata/resources/04_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: certs
            mountPath: /tls
            readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: example-com-tls
          items:
          - key: tls.crt
            path: kuard.crt
          - key: tls.key
            path: kuard.key
