testdata/resources/07_ingress_http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: kuard
spec:
  rules:
    - host: dummy.example.com
      http:
        paths:
          - backend:
              serviceName: kuard
              servicePort: 80
            path: /
  tls:
  - hosts:
    - dummy.example.com
    secretName: example-com-tls
